<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.graphics.Color" />

        <variable
            name="date"
            type="com.luoye.chat.model.ApiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/key_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_key"
            android:textColor="@{date.editKeyLiveData.length()>0?Color.BLACK:Color.RED}"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editKeytext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-"
            android:background="@drawable/edit_text_title_bg"
            android:maxLines="1"
            android:padding="5dp"
            android:maxLength="32"
            android:hint="@string/hint_edit_add_api_key"
            android:text="@={date.editKeyLiveData}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/key_title" />

        <TextView
            android:id="@+id/key_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/api_key_name"
            android:textColor="@{date.editKeyNameLiveData.length()>0?Color.BLACK:Color.RED}"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editKeytext" />

        <EditText
            android:id="@+id/editKeyNametext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_title_bg"
            android:hint="@string/hint_edit_add_api_key_name"
            android:inputType="text"
            android:maxLength="16"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@={date.editKeyNameLiveData}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/key_name_title" />


        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/purple_200"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/submit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editKeyNametext" />


        <TextView
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/purple_200"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/editKeyNametext" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>