<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:layout_marginBottom="10dp"
    android:background="@color/bg_adapter_manager">


    <View
        android:id="@+id/view"
        android:layout_width="6dp"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/api_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:includeFontPadding="false"
        android:layout_marginEnd="8dp"
        android:gravity="start|center"
        android:maxLines="1"
        android:text="@string/add_api_key_open_value"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/open"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/open"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/open"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>